--- a/Arduino-Serial-Host-CS/Advanced.resx
+++ b/Arduino-Serial-Host-CS/Advanced.resx
@@ -132,4 +132,7 @@
   <metadata name="timer_display_V2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>507, 17</value>
   </metadata>
+  <metadata name="timer_display_V3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>649, 18</value>
+  </metadata>
 </root>
