--- a/Arduino-Serial-Host-CS/Properties/Resources.resx
+++ b/Arduino-Serial-Host-CS/Properties/Resources.resx
@@ -118,16 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Close_X" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\close-x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Icon_ColorMixer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\icon colormixer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="delay_down_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delay_down_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Power_Off" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\power-off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Icon_ColorMixer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\icon colormixer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="delay_up_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delay_up_button1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Power_On" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\power-on.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Close_X" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\close-x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="delay_up_button1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delay_up_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
